[package]
name = "walkflow"
version = "0.1.0"
edition = "2021"
description = "Step through your GitHub Actions workflow locally: run each step, pause, inspect, edit, and continue — before you push."
license = "MIT"

[[bin]]
name = "walkflow"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
indexmap = { version = "2", features = ["serde"] }

[profile.release]
lto = true
strip = true
opt-level = "z"
